	  the files on disk with the resume data
	* DHT bandwidth usage optimizations
	* rate limited DHT send socket
	* tracker connections are now also subject to IP filtering
	* improved optimistic unchoke logic
	* added monitoring of the DHT lookups
	* added bandwidth reports for estimated TCP/IP overhead and DHT
	* includes DHT traffic in the rate limiter

release 0.14.2

	* added missing functions to the python bindings torrent_info::map_file,
	  torrent_info::map_block and torrent_info::file_at_offset.
	* removed support for boost-1.33 and earlier (probably didn't work)
	* fixed potential freezes issues at shutdown
	* improved error message for python setup script
	* fixed bug when torrent file included announce-list, but no valid
	  tracker urls
	* fixed bug where the files requested from web seeds would be the
	  renamed file names instead of the original file names in the torrent.
	* documentation fix of queing section
	* fixed potential issue in udp_socket (affected udp tracker support)
	* made name, comment and created by also be subject to utf-8 error
	  correction (filenames already were)
	* fixed dead-lock when settings DHT proxy
	* added missing export directives to lazy_entry
	* fixed disk cache expiry settings bug (if changed, it would be set
	  to the cache size)

release 0.14.1

	* added converter for python unicode strings to utf-8 paths
	* fixed bug in http downloader where the host field did not
	  include the port number
	* fixed headers to not depend on NDEBUG, which would prohibit
	  linking a release build of libtorrent against a debug application
	* fixed bug in disk I/O thread that would make the thread
	  sometimes quit when an error occurred
	* fixed DHT bug
	* fixed potential shutdown crash in disk_io_thread
	* fixed usage of deprecated boost.filsystem functions
	* fixed http_connection unit test
	* fixed bug in DHT when a DHT state was loaded
	* made rate limiter change in 0.14 optional (to take estimated
	  TCP/IP overhead into account)